changes in index.js renderer.js

--- a/index.html
+++ b/index.html
@@ -20,9 +20,11 @@
 <body>
     <h1>Hello World!</h1>
   
+    <input type="submit" id="fromWVbtn" class="fromWVbtn">
+    <label id="display">test affichage</label>
 <webview 
 id="myweb" 
-src="https://electformphp.000webhostapp.com/form.php" 
+src="/Users/kbi6/Documents/webView_elect/elect-app-form/form/index.html" 
 style="display:inline-flex; width:640px; height:480px"
 
 nodeintegration>
@@ -35,7 +37,7 @@ nodeintegration>
 </script> -->
 <script>
 
-require("./renderer.js")
+require("./index.js")
 </script>
 </body>
 </html>
