--- a/form/index.html
+++ b/form/index.html
@@ -42,8 +42,8 @@ div {
 }
 </style>
 <script src="./app.js"> 
-
 </script>
+<script type="text/javascript" src="ElectronApp/wvInterface.js"></script>
 </head>
 <body>
 <h1>Express yourself</h1>
