--- a/form/index.html
+++ b/form/index.html
@@ -43,7 +43,7 @@ div {
 </style>
 <script src="./app.js"> 
 </script>
-<script type="text/javascript" src="ElectronApp/wvInterface.js"></script>
+<script type="text/javascript" src="/Users/kbi6/Documents/GitHub/elect_webView/ElectronApp/wvInterface.js"></script>
 </head>
 <body>
 <h1>Express yourself</h1>
