add form to local and add java folder (require still not working)

--- a/form/index.html
+++ b/form/index.html
@@ -41,8 +41,8 @@ div {
   padding: 20px;
 }
 </style>
-<script src="./app.js"> 
-</script>
+<script src="./app.js"> </script>
+<script src="node-require"></script>
 <script type="text/javascript" src="/Users/kbi6/Documents/GitHub/elect_webView/ElectronApp/wvInterface.js"></script>
 </head>
 <body>
