--- a/index.html
+++ b/index.html
@@ -27,6 +27,11 @@
     <br><br>
     
     <button id="toWBbtn">I Clear webView</button>
+    <br><br>
+    
+    <button id="fromjava" class="fromjava">I get JAVA code</button>
+    <label id="displayjava">I'm a label and i will change</label>
+    <br><br>
     </div>
 
      <div class="column">
